-
Bug
-
Resolution: Done
-
P4: Low
-
4.5.2
-
None
Browsing through the Qt source code while trying to find the solution to a printing problem, I notice that in a couple of places in the Qt source code rather than using the central QDir::homePath() function, a direct call to getenv("HOME") is used.
I can give you three locations:
Line 862 in qprintdialog_unix.cpp in function "void QUnixPrintWidgetPrivate::applyPrinterProperties(QPrinter *p)"
Line 111 in qprintengine_qws.cpp in function "bool QtopiaPrintEngine::end()"
Line 113 in qprintengine_qws.cpp in function "bool QtopiaPrintEngine::end()"
(The last of these three, I think, might be better using QDir::tempPath(), not QDir::homePath() however based on what the source code seems to intend).